--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "rich>=13.0.0",
     "jinja2>=3.1.0",
+    "pyyaml>=6.0.0",
 ]
 
 [project.optional-dependencies]
@@ -20,6 +21,7 @@ dev = [
     "pytest-mock>=3.12.0",
     "ruff>=0.8.0",
     "mypy>=1.14.0",
+    "types-PyYAML>=6.0.0",
     "pre-commit>=4.0.0",
 ]
 
