--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "rich>=13.0.0",
     "jinja2>=3.1.0",
     "pyyaml>=6.0.0",
+    "dnspython>=2.4.0",
 ]
 
 [project.optional-dependencies]
